# orai

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  LICENSE  README.md
.agents/memory/: MEMORY.md  build-and-release.md  openrouter-api.md
.cargo/: config.toml
.github/workflows/: pages.yml  release.yml
public/: index.html  install.sh
src/: attachment.rs  chat.rs  cli.rs  client.rs  main.rs  markdown.rs  prompt.rs  stream.rs
src/tools/: confirm.rs  mod.rs  native.rs  server.rs
src/tui/: input.rs  mod.rs  render.rs
